crates/cockpitctl-domain/tests/snapshots/snapshot_edge_cases__compute_counts_empty.snap
---
source: crates/cockpitctl-domain/tests/snapshot_edge_cases.rs
expression: counts
---
{
  "info": 0,
  "warn": 0,
  "error": 0
}
