crates/cockpitctl-domain/tests/snapshots/snapshot_edge_cases__sorted_findings_empty_fields.snap
---
source: crates/cockpitctl-domain/tests/snapshot_edge_cases.rs
expression: findings
---
[
  {
    "severity": "error",
    "code": "",
    "message": "",
    "location": {
      "path": "",
      "line": 0
    }
  },
  {
    "severity": "error",
    "code": "",
    "message": ""
  },
  {
    "severity": "error",
    "code": "A1",
    "message": "msg",
    "location": {
      "path": "src/a.rs",
      "line": 1
    }
  }
]
